--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,6 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -23,4 +16,26 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.product-card {
+background-color: #FFF8DC;
+border-radius: 8px;
+padding: 1rem;
+text-align: center; 
+}
+.product-card:hover {
+background-color:darkgrey; 
+}
+
+.product-card button {
+  padding: 0.4rem 0.8rem;
+  margin-top: 0.5 rem;
+  background-color: aquamarine;
+}
+
+.catalog-header, .catalog {
+border-radius: 8px;
+padding: 1rem;
+text-align: center; 
 }
